@@ -304,6 +304,7 @@ $lang['step2_errorsamever'] = 'The selected directory appears to contain a CMSMS
 $lang['step2_errortoonew'] = 'The selected directory appears to contain a CMSMS installation with a newer version that is included in this script. Unable to proceed';
 $lang['step2_info_freshen'] = 'Freshening the installation involves replacing all core files and recreating the configuration. You will be asked basic configuration information, however the database will not be touched.';
 $lang['step2_installdate'] = 'Approximate installation date';
+$lang['step2_install_dirnotempty'] = 'This folder already contains some files and/or subfolders.  Though it is possible to install CMSMS here, it may inadvertantely corrupt an existing application.  Please double check the contents of this folder.';
 $lang['step2_hdr_upgradeinfo'] = 'Version information';
 $lang['step2_info_upgradeinfo'] = 'Below are the available release notes and changelog information for each release. The buttons below will display detailed information as to what has changed in each version of CMS Made Simple. There may be further instructions or warnings in each version that could affect the upgrade process.';
 $lang['step2_minupgradever'] = 'The minimum version that this application can upgrade from is: %s. You may need to upgrade your application to a newer version in stages, using another method before completing the upgrade process. Please ensure that you have a complete, verified backup before using any upgrade method.';
